--- a/index.html
+++ b/index.html
@@ -22,12 +22,21 @@
     <div id="main-container" class="container">
         <section class="main-section">
             <h3 class="text-info">About Me</h3>
-            <img src="images/profilepic.png" class="img-fluid" alt="Arielle-Responsive">
-            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aliquam ac orci ut lorem luctus pharetra dignissim ac metus. Fusce vel finibus magna. Fusce eu laoreet magna. Phasellus tempus neque nec lacus elementum interdum. Maecenas sit amet ligula sed orci scelerisque scelerisque. Vivamus id scelerisque eros, vitae consectetur lacus. Vestibulum facilisis.</p>
+            <div class="row">
+              <div class="col-sm-6">
+                <img src="images/profilepic.png" class="img-fluid" alt="Arielle-Responsive">
+              </div>
+              <div class="col-sm-6">
+                <h3><a href="https://www.linkedin.com/in/arielle-shamash-28531014a" target="_blank" class="badge badge-primary">LinkedIn</a></h3>
+                <h3><a href="https://github.com/arielleshamash" target="_blank" class="badge badge-dark">GitHub</a></h3>
+                <p>arielleshamash@gmail.com</p>
+              </div>
+            </div>
+            <p>Arielle was born on a sunny July morning in Tarzana, California.  She grew up with both parents, an older brother, and a few cats. BSing her way through high school, she incredibly got accepted to college. After starting at the University of Oregon, she studied environmental science and attained a Bachelor of Science degree with a minor in Judaic Studies.</p>
 
-      <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aliquam ac orci ut lorem luctus pharetra dignissim ac metus. Fusce vel finibus magna. Fusce eu laoreet magna. Phasellus tempus neque nec lacus elementum interdum. Maecenas sit amet ligula sed orci scelerisque scelerisque. Vivamus id scelerisque eros, vitae consectetur lacus. Vestibulum facilisis.</p>
+      <p>From there, she decided the best course of action was to start bartending under the presumption that it would help her pay for grad school.  Unforturnately, 5 years later, she is still bartending and has lost all hope of going back to school to pursue a masters degree in environmental science. </p>
 
-      <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aliquam ac orci ut lorem luctus pharetra dignissim ac metus. Fusce vel finibus magna. Fusce eu laoreet magna. Phasellus tempus neque nec lacus elementum interdum. Maecenas sit amet ligula sed orci scelerisque scelerisque. Vivamus id scelerisque eros, vitae consectetur lacus. Vestibulum facilisis.</p>
+      <p>In a desperate attempt to escape the customer service industry, she signed up for a coding bootcamp with the hopes it will lead to a career that doesn't involve having to smile and say thank you to everyone even when they are rude. Her ultimate goal is to be able to go and sit at a bar or restaurant with her laptop and it still be considered "working".</p>
 
     </section>
 
