--- a/portfolio.html
+++ b/portfolio.html
@@ -39,19 +39,20 @@
             </a>
           <p class="p-3 mb-2 bg-info text-white text-center">Train Scheduler</p>
         </div>
-      </div>
-      <div class="row justify-content-start">
         <div class="col-4">
           <a href="https://arielleshamash.github.io/TriviaGame/" target="_blank"><img src="images/abstract2.jpg" class="img-fluid" alt="Responsive image">
           </a>
           <p class="p-3 mb-2 bg-info text-white text-center">Trivia Game</p>
         </div>
+      </div>
+      <!-- <div class="row justify-content-start">
+        
         <div class="col-4">
             <a href="https://arielleshamash.github.io/unit-4-game/" target="_blank"><img src="images/nature1.jpg" class="img-fluid" alt="Responsive image">
             </a>
           <p class="p-3 mb-2 bg-info text-white text-center">Princess Guess</p>
         </div>
-      </div>
+      </div> -->
       <div class="row justify-content-start">
         <div class="col-4">
           <a href="https://arielleshamash.github.io/giphygame/" target="_blank"><img src="images/cats1.jpg" class="img-fluid" alt="Responsive image">
@@ -63,6 +64,11 @@
             </a>
           <p class="p-3 mb-2 bg-info text-white text-center">&Chill</p>
         </div>
+        <div class="col-4">
+          <a href="https://project-2-group.herokuapp.com/" target="_blank"><img src="images/nature1.jpg" class="img-fluid" alt="Responsive image">
+          </a>
+        <p class="p-3 mb-2 bg-info text-white text-center">Plan It!</p>
+      </div>
       </div>
 
   </div>
